# kizashi

./: .dockerignore  .env.example  .gitguardian.yaml  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  docker-compose.yml  state.md
crates/action-executor/: Cargo.toml
crates/action-executor/migrations/: 0001_create_action_executions.sql  0002_add_tenant_id_to_action_executions.sql  0003_action_executions_immutable.sql
crates/action-executor/src/: action_dispatcher.rs  action_dispatcher_test.rs  dead_letter_handlers_test.rs  execution_handlers.rs  execution_handlers_test.rs  execution_repository.rs  execution_repository_test.rs  graph_send_mail_action_dispatcher.rs  graph_send_mail_action_dispatcher_test.rs  lib.rs  main.rs  process_event.rs  process_event_test.rs  retry.rs  routing_action_dispatcher.rs  routing_action_dispatcher_test.rs  smtp_action_dispatcher.rs  smtp_action_dispatcher_test.rs  teams_alert_action_dispatcher.rs  teams_alert_action_dispatcher_test.rs  trigger_client.rs  trigger_client_test.rs
crates/action-executor/tests/: dead_letter_integration_test.rs  execution_repository_integration_test.rs  rabbitmq_integration_test.rs  smtp_action_dispatcher_integration_test.rs
crates/agent-scheduler/: Cargo.toml
crates/agent-scheduler/migrations/: 0001_create_agents.sql  0002_add_last_checkpoint.sql
crates/agent-scheduler/src/: agent_repository.rs  agent_repository_test.rs  invoker.rs  invoker_test.rs  lib.rs  main.rs  sensor_repository.rs  sensor_repository_test.rs
crates/agent-scheduler/tests/: agent_repository_integration_test.rs  sensor_repository_integration_test.rs
crates/auth-service/: Cargo.toml
crates/auth-service/migrations/: 0001_create_local_users.sql  0002_create_tenants.sql  0003_add_role_to_local_users.sql  0004_create_auth_audit_log.sql  0005_auth_audit_log_immutable.sql  0006_add_tenant_branding.sql  0007_add_mfa_to_local_users.sql  0008_create_login_attempts.sql
crates/auth-service/src/: audit_log.rs  audit_log_error_hygiene_test.rs  audit_log_test.rs  branding_handler.rs  branding_handler_test.rs  data_subject_handler.rs  data_subject_handler_test.rs  internal_secret.rs  internal_secret_test.rs  lib.rs  lib_test.rs  local_login_handler.rs  local_login_handler_test.rs  local_user_repository.rs  local_user_repository_test.rs  login_attempt_handler.rs  login_attempt_handler_test.rs  login_attempt_repository.rs  login_attempt_repository_test.rs  main.rs  mfa.rs  mfa_handler.rs  mfa_handler_test.rs  mfa_repository.rs  mfa_repository_test.rs  mfa_test.rs  oidc_client.rs  oidc_client_test.rs  oidc_handler.rs  oidc_handler_test.rs  password.rs  password_change_handler.rs  password_change_handler_test.rs  password_policy.rs  password_policy_test.rs  password_test.rs  recent_audit_log_handler_test.rs  session_audit_writer.rs  session_audit_writer_test.rs  session_client.rs  (+9 more)
crates/auth-service/tests/: hash_password_bin_test.rs  local_user_repository_integration_test.rs  login_attempt_integration_test.rs  mfa_integration_test.rs  session_audit_writer_integration_test.rs  tenant_branding_repository_integration_test.rs
crates/backup-service/: Cargo.toml
crates/backup-service/migrations/: 0001_create_backup_runs.sql
crates/backup-service/src/: backup_executor.rs  backup_executor_test.rs  backup_run_repository.rs  backup_run_repository_test.rs  backup_store.rs  backup_store_test.rs  lib.rs  main.rs  ops_handlers.rs  ops_handlers_test.rs  pg_dump_runner.rs  pg_dump_runner_test.rs
crates/backup-service/tests/: backup_run_repository_integration_test.rs  pg_dump_integration_test.rs
crates/common/: Cargo.toml
crates/common/src/: action_execution.rs  action_execution_test.rs  agent.rs  agent_change_event.rs  agent_change_event_test.rs  agent_test.rs  analysis_config.rs  analysis_config_test.rs  analyzed_record.rs  analyzed_record_test.rs  bus.rs  connector.rs  connector_test.rs  db.rs  db_test.rs  event.rs  (+31 more)
crates/config-admin-service/: Cargo.toml
crates/dashboard-api/: Cargo.toml
crates/e2e-tests/: Cargo.toml
crates/egress-gateway/: Cargo.toml
crates/observability/: Cargo.toml
crates/ontology-service/: Cargo.toml
crates/report-scheduler/: Cargo.toml
ui/: Cargo.toml
ui/src/: actions_handler.rs  actions_library_handler.rs  actions_library_handler_test.rs  agent_detail_handler.rs  agent_detail_handler_test.rs  agent_script_handler.rs  agent_script_handler_test.rs  agents_client.rs  agents_client_test.rs  agents_handler.rs  agents_handler_test.rs  analysis_config_client.rs  analysis_config_client_test.rs  analysis_config_handler.rs  analysis_config_handler_test.rs  api_keys_client.rs  api_keys_client_test.rs  api_keys_handler.rs  api_keys_handler_mutations_test.rs  api_keys_handler_test.rs  attention_summary_handler.rs  attention_summary_handler_test.rs  audit_log_client.rs  audit_log_client_test.rs  audit_log_handler.rs  audit_log_handler_test.rs  auth_client.rs  auth_client_test.rs  backlog_client.rs  backlog_client_test.rs  backup_status_client.rs  backup_status_client_test.rs  backup_status_handler.rs  backup_status_handler_test.rs  branding_client.rs  branding_client_test.rs  branding_handler.rs  branding_handler_test.rs  branding_middleware.rs  branding_middleware_test.rs  (+138 more)
ui/static/: charts.js  command-palette.js  confirm-danger.js
ui/templates/: action_detail.html  actions.html  actions_library.html  agent_detail.html  agent_generate_form.html  agent_generate_select.html  agents.html  analysis_config.html  api_keys.html  audit_log.html  backups.html  branding.html  compliance_report.html  configuration.html  data.html  data_compare.html  data_detail.html  egress_allowlist.html  event_detail.html  event_types.html  events.html  health.html  incident_detail.html  incidents.html  layout.html  login.html  login_attempts.html  login_mfa.html  mfa_settings.html  normalization_mappings.html  ontology.html  ontology_compare.html  overview.html  password_settings.html  permissions_reference.html  pipeline.html  recent_audit_log.html  record_journey.html  report_schedules.html  reports.html  (+14 more)
(+500 files in other folders)
