[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/ingestion-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/chris17453/kizashi"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = { version = "0.1" }
thiserror = { version = "1" }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
lapin = { version = "2" }
proptest = { version = "1" }
futures-util = { version = "0.3" }

[profile.dev]
debug = 1

[profile.release]
lto = true
codegen-units = 1
