[workspace]
resolver = "2"
members = [
  "crates/action-executor",
  "crates/analysis-service",
  "crates/auth-service",
  "crates/common",
  "crates/config-admin-service",
  "crates/connectors/connector-runtime",
  "crates/connectors/fabric",
  "crates/connectors/generic",
  "crates/connectors/graph-mail",
  "crates/connectors/graph-teams",
  "crates/connectors/sql",
  "crates/connectors/zendesk",
  "crates/dashboard-api",
  "crates/ingestion-gateway",
  "crates/ingestion-service",
  "crates/normalization-service",
  "crates/observability",
  "crates/query-gateway",
  "crates/retention-service",
  "crates/trigger-engine",
  "ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/chris17453/kizashi"
# Every crate in this workspace is an internal service/library, never published to crates.io.
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = { version = "0.1" }
thiserror = { version = "1" }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
lapin = { version = "2" }
proptest = { version = "1" }
futures-util = { version = "0.3" }
sha2 = { version = "0.10" }
argon2 = { version = "0.5" }
oauth2 = { version = "4", default-features = false, features = ["reqwest"] }
aws-sdk-s3 = { version = "1" }
aws-config = { version = "1" }
flate2 = { version = "1" }
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }

[profile.dev]
debug = 1

[profile.release]
lto = true
codegen-units = 1
