[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
argon2 = { workspace = true }
oauth2 = { workspace = true }
totp-rs = { workspace = true }
rand = "0.8"

[dev-dependencies]
tower = { workspace = true }
