[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
