[package]
name = "config-admin-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
lapin = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
