[package]
name = "egress-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tower = { workspace = true }
