[package]
name = "connector-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../../common" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
axum = { workspace = true }
