[package]
name = "connector-imap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../../common" }
connector-runtime = { path = "../connector-runtime" }
reqwest = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
async-imap = { workspace = true }
async-native-tls = { workspace = true }
mail-parser = { workspace = true }

[dev-dependencies]
